@@ -1,3 +1,7 @@
+Fri Jan  9 10:05:14 2004  Siena.  <siena@faculty.chiba-u.jp>
+
+	* lib/mkmf.rb (libpathflag): use single quotes.  [ruby-dev:22440]
+
 Thu Jan  8 23:49:21 2004  WATANABE Hirofumi  <eban@ruby-lang.org>
 
 	* configure.in (RDOCTARGET): new macro.  if you want to install
